sort on folders

--- a/html/Donbass.html
+++ b/html/Donbass.html
@@ -3,93 +3,62 @@
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
         <meta charset="ASCII">
-        <link rel="stylesheet" type="text/css" href="file.css">
+        <link rel="stylesheet" type="text/css" href="../file.css">
     </head>
-
     <body>
         <header class="header">
             <nav class="navbar">
-                <a href="index.html"><img class="logo" src="images/CoalLogo.png"></a>
+                <a href="index.html"><img class="logo" src="../images/CoalLogo.png"></a>
                 <a href="Donbass_X.html" style="padding: 4px;">DonBass</a>
                 <a href="Donbass_Air.html" style="padding: 4px;">DonBass Air</a>
                 <a href="catalog.html" style="padding: 4px;">Поддержка</a>
                 <a href="magazin.html" style="padding: 4px">Магазин</a>
                 <a href="director.html" style="padding: 4px">Директор</a>
-                <a href="basket.php"><img class="logo" src="images/корзина.png"></a>
-                <a href="account.php"><img style="width: 3wh; height: 3vh;" src="images/user-profile-black.png"></a>
+                <a href="../php/basket.php"><img class="logo" src="../images/корзина.png"></a>
+                <a href="../php/account.php"><img style="width: 3wh; height: 3vh;" src="../images/user-profile-black.png"></a>
             </nav>
             <nav class="navbar-under">
-                <b>DonBass Air</b>
+                <b>DonBass X</b>
             </nav>
         </header>
         <hr>
-        <div class="main tablet_sale" style="padding-bottom: 5%;">
-            <div class="Span12" style="text-align: center;">
-                <h2>Выберете свой Donbass Air.</h2>
+
+        <div class="main" style="padding-left: 20%; padding-right: 20%; padding-top: 3%;">
+            <div class="Span6" style="text-align: center;">
+                <img src="../images/DonbassXFridge.png" style="width: 100%;" id="donbassX">
             </div>
-            
-            <div class="Span6 product_field" style="font-size: 80%; padding-bottom: 5%;">
-                <p style="text-align: center;"><img id="donbassAir1" src="images/Air/air.png" style="width: 80%;"></p>
-                <button class="button-color" style="background-color: white;" id="whiteAir1"></button>
-                <button class="button-color" style="background-color: pink;" id="pinkAir1"></button>
-                <button class="button-color" style="background-color: rgb(203, 176, 118);" id="goldenAir1"></button>
-                <button class="button-color" style="background-color: red;" id="redAir1"></button>
-                <button class="button-color" style="background-color: black;" id="blackAir1"></button>
-                <script src="AirnodeNoCookies.js"></script>
-                <p>
-                    <b>DonBass Air</b><br><br>
-                    <b>120V<br>
-                    100 Вт<br>
-                    Air Flow<br>
-                    </b>
-                </p>
-                <p style="font-size: 60%; color: rgb(92, 92, 92);">26" дюймовый стальной корпус<br>
-                    Материал: нержавеющая сталь<br>
-                    Уровень шума: 20 дБ<br>
-                    Тип: однокамерный<br>
-                </p>
-                <p><b>$1000.00</b></p>
-                <p style="font-size: 80%; color: rgb(92, 92, 92);">или</p>
-                <p><b>$83.33/м. за 1 год</b></p>
+            <div class="Span6" style="padding: 5%">
+                <p style="font-size: 100%;"><b>Кастомизируйте свой 57" дюймовый Donbass X</b></p>
+                <p class="info">Система Air flow от компании Coal
+                <br>Материал основного корпуса: нержавеющая сталь
+                <br>Цвет: белый
+                <br>Уровень шума: 50 дБ
+                <br>Тип: однокамерный
+                <br>
+                <br>Дверца сделана по механизму - CTouch Mechanism 
+                <br><br>
                 <hr>
+                </p>
+
                 <p class="info">
                     <b>Coal Trade In</b>
                     <br><br>Возьмите кредит на новый Donbass, когда обмениваете его на прошлую версию. 
                     Это даст вам скидку, в зависимости от сданной техники. Либо вы можете сами 
                     заняться переработкой устройств<br><br>
                 </p>
-                <a href="DonbassAir2.html"><button class="button button4">Выбрать</button></a>
-            </div>
+                <hr>
 
-            <div class="Span6 product_field" style="font-size: 80%; padding-bottom: 5%;">
-                <p style="text-align: center;"><img id="donbassAir2" src="images/Air/air.png" style="width: 80%;"></p>
-                <button class="button-color" style="background-color: white;" id="whiteAir2"></button>
-                <button class="button-color" style="background-color: pink;" id="pinkAir2"></button>
-                <button class="button-color" style="background-color: rgb(203, 176, 118);" id="goldenAir2"></button>
-                <button class="button-color" style="background-color: red;" id="redAir2"></button>
-                <button class="button-color" style="background-color: black;" id="blackAir2"></button>
-                <script src="Airnode2NoCookies.js"></script>
-                <p>
-                    <b>DonBass Air</b><br><br>
-                    <b>100V<br>
-                    90 Вт<br>
-                    Air Flow<br></b></p>
-                    <p style="font-size: 60%; color: rgb(92, 92, 92);">26" дюймовый стальной корпус<br>
-                    Материал: сталь<br>
-                    Уровень шума: 20 дБ<br>
-                    Тип: однокамерный<br>
-                    </p>
-                    <p><b>$800.00</b></p>
-                    <p style="font-size: 80%; color: rgb(92, 92, 92);">или</p>
-                    <p><b>$75/м. за 1 год</b></p>
-                    <hr>
-                    <p class="info">
-                        <b>Coal Trade In</b>
-                        <br><br>Возьмите кредит на новый Donbass, когда обмениваете его на прошлую версию. 
-                        Это даст вам скидку, в зависимости от сданной техники. Либо вы можете сами 
-                        заняться переработкой устройств<br><br>
-                    </p>
-                    <a href="DonbassAir.html"><button class="button button4">Выбрать</button></a>
+                <p class="info">
+                    <b>Цвет:</b>
+                    <br><br>
+                    <button class="button-product" style="padding: 8% 44%;" id="whiteX">Белый</button>
+                    <br>
+                    <br>
+                    <button class="button-product" style="padding: 8% 43%;" id="blackX">Чёрный</button>
+                    <br>
+                    <br>
+                    <button class="button-product" style="padding: 8% 39%;" id="spaceX" >Космически чёрный</button>
+                </p>
             </div>
         </div>
         <footer>
@@ -125,5 +94,13 @@
             <hr>
             <p>Copyright © 2024 Coal Inc. Все права защищены.</p>
         </footer>
+        <div class="sale1">
+            <div class="sale">
+                <p style="text-align: end; font-size: 120%;"><b>$1999.00 или
+                <br>$91.6/м. за 2 года</b></p>
+                <p style="text-align: start;"><a href="../php/great_basket.php"><button id="chosen" class="button button4">Выбрать</button></a></p>
+            </div>
+        </div>
     </body>
+    <script src="../js/nodes.js"></script>
 </html>
