--- a/html/DonbassAir2.html
+++ b/html/DonbassAir2.html
@@ -3,19 +3,19 @@
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
         <meta charset="ASCII">
-        <link rel="stylesheet" type="text/css" href="file.css">
+        <link rel="stylesheet" type="text/css" href="../file.css">
     </head>
     <body>
         <header class="header">
             <nav class="navbar">
-                <a href="index.html"><img class="logo" src="images/CoalLogo.png"></a>
+                <a href="index.html"><img class="logo" src="../images/CoalLogo.png"></a>
                 <a href="Donbass_X.html" style="padding: 4px;">DonBass</a>
                 <a href="Donbass_Air.html" style="padding: 4px;">DonBass Air</a>
                 <a href="catalog.html" style="padding: 4px;">Поддержка</a>
                 <a href="magazin.html" style="padding: 4px">Магазин</a>
                 <a href="director.html" style="padding: 4px">Директор</a>
-                <a href="basket.php"><img class="logo" src="images/корзина.png"></a>
-                <a href="account.php"><img style="width: 3wh; height: 3vh;" src="images/user-profile-black.png"></a>
+                <a href="../php/basket.php"><img class="logo" src="../images/корзина.png"></a>
+                <a href="../php/account.php"><img style="width: 3wh; height: 3vh;" src="../images/user-profile-black.png"></a>
             </nav>
             <nav class="navbar-under">
                 <b>DonBass Air</b>
@@ -25,7 +25,7 @@
 
         <div class="main" style="padding-left: 20%; padding-right: 20%; padding-top: 3%;">
             <div class="Span6" style="text-align: center;">
-                <img src="images/Air/air.png" style="width: 100%;" id="donbassAir2">
+                <img src="../images/Air/air.png" style="width: 100%;" id="donbassAir2">
             </div>
             <div class="Span6" style="padding: 5%">
                 <p style="font-size: 100%;"><b>Кастомизируйте свой 26" дюймовый Donbass Air</b></p>
@@ -103,9 +103,9 @@
             <div class="sale">
                 <p style="text-align: end; font-size: 120%;"><b>$1000.00 или
                 <br>$83.33/м. за 1 год</b></p>
-                <p style="text-align: start;"><a href="great_basket.php"><button id="chosen" class="button button4">Выбрать</button></a></p>
+                <p style="text-align: start;"><a href="../php/great_basket.php"><button id="chosen" class="button button4">Выбрать</button></a></p>
             </div>
         </div>
-        <script src="Airnode2.js"></script>
+        <script src="../js/Airnode2.js"></script>
     </body>
 </html>
