--- a/html/DonbassSE.html
+++ b/html/DonbassSE.html
@@ -3,37 +3,37 @@
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
         <meta charset="ASCII">
-        <link rel="stylesheet" type="text/css" href="file.css">
+        <link rel="stylesheet" type="text/css" href="../file.css">
     </head>
     <body>
         <header class="header">
             <nav class="navbar">
-                <a href="index.html"><img class="logo" src="images/CoalLogo.png"></a>
+                <a href="index.html"><img class="logo" src="../images/CoalLogo.png"></a>
                 <a href="Donbass_X.html" style="padding: 4px;">DonBass</a>
                 <a href="Donbass_Air.html" style="padding: 4px;">DonBass Air</a>
                 <a href="catalog.html" style="padding: 4px;">Поддержка</a>
                 <a href="magazin.html" style="padding: 4px">Магазин</a>
                 <a href="director.html" style="padding: 4px">Директор</a>
-                <a href="basket.php"><img class="logo" src="images/корзина.png"></a>
-                <a href="account.php"><img style="width: 3wh; height: 3vh;" src="images/user-profile-black.png"></a>
+                <a href="../php/basket.php"><img class="logo" src="../images/корзина.png"></a>
+                <a href="../php/account.php"><img style="width: 3wh; height: 3vh;" src="../images/user-profile-black.png"></a>
             </nav>
             <nav class="navbar-under">
-                <b>DonBass X</b>
+                <b>DonBass X SE</b>
             </nav>
         </header>
         <hr>
 
         <div class="main" style="padding-left: 20%; padding-right: 20%; padding-top: 3%;">
             <div class="Span6" style="text-align: center;">
-                <img src="images/DonbassXFridgeRed.png" style="width: 100%;" id="donbassX">
+                <img src="../images/DonbassSE.png" style="width: 100%;">
             </div>
             <div class="Span6" style="padding: 5%">
-                <p style="font-size: 100%;"><b>Кастомизируйте свой 57" дюймовый Donbass X</b></p>
+                <p style="font-size: 100%;"><b>Кастомизируйте свой 57" дюймовый Donbass SE 2</b></p>
                 <p class="info">Система Air flow от компании Coal
-                <br>Материал основного корпуса: нержавеющая сталь
+                <br>Материал основного корпуса: сталь
                 <br>Цвет: белый
-                <br>Уровень шума: 50 дБ
-                <br>Тип: однокамерный
+                <br>Уровень шума: 40 дБ
+                <br>Тип: двухкамерный
                 <br>
                 <br>Дверца сделана по механизму - CTouch Mechanism 
                 <br><br>
@@ -46,11 +46,20 @@
                     Это даст вам скидку, в зависимости от сданной техники. Либо вы можете сами 
                     заняться переработкой устройств<br><br>
                 </p>
-
                 <hr>
 
                 <p class="info">
-                    Все деньги, полученные с продаж модели в данной рассцветке, пойдут на лечение людей борящихся со СПИДом.
+                    <b>Комплектация:</b>
+                    <br><br>
+                    <button id="fashion" class="button-product button-complectation" style="padding: 10px 5%;">
+                        <p style="text-align: start;">Полочки типа Fashion</p>
+                        <p id="fashionPrice" style="text-align: end; align-self: center;"> + $800.00</p>
+                    </button>
+                    <br>
+                    <button id="compressor" class="button-product button-complectation" style="padding: 10px 5%;">
+                        <p style="text-align: start;">Дополнительная калибровка компрессора</p>
+                        <p id="compressorPrice" style="text-align: end; align-self: center;"> + $500.00</p>
+                    </button>
                 </p>
             </div>
         </div>
@@ -89,11 +98,11 @@
         </footer>
         <div class="sale1">
             <div class="sale">
-                <p style="text-align: end; font-size: 120%;"><b>$1999.00 или
-                <br>$91.6/м. за 2 года</b></p>
-                <p style="text-align: start;"><a href="great_basket.php"><button id="chosen" class="button button4">Выбрать</button></a></p>
+                <p style="text-align: end; font-size: 120%;"><b>$<b id="priceSE">1499</b>.00 или
+                <br>$<b id="creditSE">62.45</b>/м. за 2 года</b></p>
+                <p style="text-align: start;"><a href="../php/great_basket.php"><button id="chosen" class="button button4">Выбрать</button></a></p>
             </div>
         </div>
+        <script src="../js/DonbassSE.js"></script>
     </body>
-    <script src="nodesPR.js"></script>
 </html>
