--- a/html/Donbass_X.html
+++ b/html/Donbass_X.html
@@ -3,20 +3,20 @@
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
         <meta charset="ASCII">
-        <link rel="stylesheet" type="text/css" href="file.css">
+        <link rel="stylesheet" type="text/css" href="../file.css">
     </head>
 
     <body>
         <header class="header">
             <nav class="navbar">
-                <a href="index.html"><img class="logo" src="images/CoalLogo.png"></a>
+                <a href="index.html"><img class="logo" src="../images/CoalLogo.png"></a>
                 <a href="Donbass_X.html" style="padding: 4px;">DonBass</a>
                 <a href="Donbass_Air.html" style="padding: 4px;">DonBass Air</a>
                 <a href="catalog.html" style="padding: 4px;">Поддержка</a>
                 <a href="magazin.html" style="padding: 4px">Магазин</a>
                 <a href="director.html" style="padding: 4px">Директор</a>
-                <a href="basket.php"><img class="logo" src="images/корзина.png"></a>
-                <a href="account.php"><img style="width: 3wh; height: 3vh;" src="images/user-profile-black.png"></a>
+                <a href="../php/basket.php"><img class="logo" src="../images/корзина.png"></a>
+                <a href="../php/account.php"><img style="width: 3wh; height: 3vh;" src="../images/user-profile-black.png"></a>
             </nav>
             <nav class="navbar-under">
                 <b>DonBass X</b>
@@ -29,11 +29,11 @@
             </div>
 
             <div class="Span6 product_field" style="font-size: 80%; padding-bottom: 5%;">
-                <p style="text-align: center;"><img id="donbassX" src="images/DonbassXFridge.png" style="width: 80%;"></p>
+                <p style="text-align: center;"><img id="donbassX" src="../images/DonbassXFridge.png" style="width: 80%;"></p>
                 <button class="button-color" style="background-color: white;" id="whiteX"></button>
                 <button class="button-color" style="background-color: grey;" id="blackX"></button>
                 <button class="button-color" style="background-color: black;" id="spaceX"></button>
-                <p><img src="images/Xamarin.png" style="width: 30%;">
+                <p><img src="../images/Xamarin.png" style="width: 30%;">
                 <br><b>DonBass X</b><br><br>
                 <b>240V<br>
                 168 Вт<br>
@@ -58,8 +58,8 @@
                 <a href="Donbass.html"><button class="button button4">Выбрать</button></a>
             </div>
             <div class="Span6 product_field" style="font-size: 80%;">
-                <p style="text-align: center;"><img src="images/DonbassXFridgeRed.png" style="width: 80%;"></p>
-                <p><img src="images/Xamarin.png" style="width: 30%;">
+                <p style="text-align: center;"><img src="../images/DonbassXFridgeRed.png" style="width: 80%;"></p>
+                <p><img src="../images/Xamarin.png" style="width: 30%;">
                     <br><b>DonBass X Product Red</b><br><br>
                     <b>240V<br>
                     168 Вт<br>
@@ -85,8 +85,8 @@
             </div>
             
             <div class="Span6 product_field" style="font-size: 80%;">
-                <p style="text-align: center;"><img src="images/Холодильник31.png" style="width: 80%;"></p>
-                <p><img src="images/Xamarin.png" style="width: 30%;">
+                <p style="text-align: center;"><img src="../images/Холодильник31.png" style="width: 80%;"></p>
+                <p><img src="../images/Xamarin.png" style="width: 30%;">
                     <br><b>DonBass X Plus</b><br><br>
                     <b>250V<br>
                     190 Вт<br>
@@ -112,7 +112,7 @@
                 <a href="DonbassPlus.html"><button class="button button4">Выбрать</button></a>
             </div>
             <div class="Span6 product_field" style="font-size: 80%;">
-                <p style="text-align: center;"><img src="images/Холодильник21.png" style="width: 80%;"></p>
+                <p style="text-align: center;"><img src="../images/Холодильник21.png" style="width: 80%;"></p>
                     <b>DonBass X Mini</b><br><br>
                     <b>160V<br>
                     168 Вт<br>
@@ -139,11 +139,11 @@
             <div class="Span12 product_field" style="text-align: center;">
                 <div class="main">
                     <div class="Span6">
-                        <img src="images/DonbassSE.png" style="text-align: center; padding: 5%; width: 100%;">
+                        <img src="../images/DonbassSE.png" style="text-align: center; padding: 5%; width: 100%;">
                     </div>
                     <div class="Span6" style="text-align: start;">
                         <p><b>Donbass SE 2</b></p>
-                        <p><img src="images/Xamarin.png" style="width: 30%;">
+                        <p><img src="../images/Xamarin.png" style="width: 30%;">
                             <br><b>190V<br>
                             140 Вт<br>
                             Air Flow<br></b></p>
@@ -202,6 +202,6 @@
             <hr>
             <p>Copyright © 2024 Coal Inc. Все права защищены.</p>
         </footer>
-        <script src="nodesNocookies.js"></script>
+        <script src="../js/nodesNocookies.js"></script>
     </body>
 </html>
