--- a/html/catalog.html
+++ b/html/catalog.html
@@ -2,75 +2,32 @@
 <html>
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-        <link rel="stylesheet" type="text/css" href="file.css">
+        <link rel="stylesheet" type="text/css" href="../file.css">
     </head>
     <body>
-
-        <?php
-            $mysql = new mysqli("localhost", "root", "", "site_history");
-            $mysql->query("SET NAMES utf8");
-
-            $doc = new DomDocument;
-
-            $sql = "SHOW TABLES LIKE 'users'";
-            $result = $mysql->query($sql);
-
-            $email = $_COOKIE["email"];
-            $bas_res = $_COOKIE["products"];
-
-            $basket = $mysql->query("SELECT * FROM `users` WHERE email = '$email'");
-            $b1 = $mysql->query("SELECT * FROM `users` WHERE email = '$email'");
-
-
-            if (($_COOKIE["prod_res"] == $b1->fetch_assoc()['basket']) && ($bas_res != $_COOKIE["prod_res"])) {
-                $mysql->query("UPDATE `users` SET `basket` = '$bas_res' WHERE `email` = '$email' ");
-                setcookie("prod_res", $bud_res);
-            } else {
-                setcookie("products", $basket->fetch_assoc()['basket']);
-                setcookie("prod_res", $basket->fetch_assoc()['basket']);
-            }
-
-            $mysql->close();
-        ?>
-
-        <script>
-            function getCookie(name) {
-                let matches = document.cookie.match(new RegExp(
-                "(?:^|; )" + name.replace(/([\.$?*|{}\(\)\[\]\\\/\+^])/g, '\\$1') + "=([^;]*)"
-                ));
-                return matches ? decodeURIComponent(matches[1]) : undefined;
-            }
-
-            function setCookie(name, value) {
-                updatedCookie = encodeURIComponent(name) + "=" + encodeURIComponent(value);
-                document.cookie = updatedCookie;
-            }
-
-            setCookie("prod_res", getCookie("products"));
-        </script>
-
         <header class="header">
             <nav class="navbar">
-                <a href="index.html"><img class="logo" src="images/CoalLogo.png"></a>
+                <a href="index.html"><img class="logo" src="../images/CoalLogo.png"></a>
                 <a href="Donbass_X.html" style="padding: 4px;">DonBass</a>
                 <a href="Donbass_Air.html" style="padding: 4px;">DonBass Air</a>
                 <a href="catalog.html" style="padding: 4px;">Поддержка</a>
                 <a href="magazin.html" style="padding: 4px">Магазин</a>
                 <a href="director.html" style="padding: 4px">Директор</a>
-                <a href="basket.php"><img class="logo" src="images/корзина.png"></a>
-                <a href="account.php"><img style="width: 3wh; height: 3vh;" src="images/user-profile-black.png"></a>
+                <a href="../php/basket.php"><img class="logo" src="../images/корзина.png"></a>
+                <a href="../php/account.php"><img style="width: 3wh; height: 3vh;" src="../images/user-profile-black.png"></a>
             </nav>
+            <nav class="navbar-under">
+                <b>Поддержка</b>
+            </nav>
+            <hr>
         </header>
 
-        <div id="mainComponent" class="main">
+        <div class="main">
             <div class="Span12" style="padding-left: 18%; padding-right: 18%; font-size: 50%; padding-top: 5%; padding-bottom: 5%;">
-                <h1>Просмотрите свою корзину.</h1>
-                <p>Бесплатная доставка и возврат.</p>
+                <h1>По всем вопросам эксплуатации или каких-либо ошибок, связанных с неправильной работой устройств, писать нам на почту mdfd.all@gmail.com</h1>
             </div>
-
         </div>
 
-        <script src="basket.js"></script>
         <footer>
             <p> Стоимость обмена зависит от состояния, года выпуска и конфигурации вашего устройства, 
                 на которое распространяется действие программы обмена. Не на все устройства можно получить кредит. 
