--- a/html/human.html
+++ b/html/human.html
@@ -2,19 +2,19 @@
 <html>
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-        <link rel="stylesheet" type="text/css" href="file.css">
+        <link rel="stylesheet" type="text/css" href="../file.css">
     </head>
     <body>
         <header class="header">
             <nav class="navbar">
-                <a href="index.html"><img class="logo" src="images/CoalLogo.png"></a>
+                <a href="index.html"><img class="logo" src="../images/CoalLogo.png"></a>
                 <a href="Donbass_X.html" style="padding: 4px;">DonBass</a>
                 <a href="Donbass_Air.html" style="padding: 4px;">DonBass Air</a>
                 <a href="catalog.html" style="padding: 4px;">Поддержка</a>
                 <a href="magazin.html" style="padding: 4px">Магазин</a>
                 <a href="director.html" style="padding: 4px">Директор</a>
-                <a href="basket.php"><img class="logo" src="images/корзина.png"></a>
-                <a href="account.php"><img style="width: 3wh; height: 3vh;" src="images/user-profile-black.png"></a>
+                <a href="../php/basket.php"><img class="logo" src="../images/корзина.png"></a>
+                <a href="../php/account.php"><img style="width: 3wh; height: 3vh;" src="../images/user-profile-black.png"></a>
             </nav>
             <nav class="navbar-under">
                 <b>Пользовательское соглашение</b>
