--- a/html/magazin.html
+++ b/html/magazin.html
@@ -2,86 +2,47 @@
 <html>
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-        <meta charset="ASCII">
-        <link rel="stylesheet" type="text/css" href="file.css">
+        <link rel="stylesheet" type="text/css" href="../file.css">
     </head>
 
     <body>
-        <header class="header root">
+        <header class="header">
             <nav class="navbar">
-                <a href="index.html"><img class="logo" src="images/CoalLogoBlack.png"></a>
-                <a href="Donbass_X.html" style="padding: 4px; color: white;">DonBass</a>
-                <a href="Donbass_Air.html" style="padding: 4px; color: white;">DonBass Air</a>
-                <a href="catalog.html" style="padding: 4px; color: white;">Поддержка</a>
-                <a href="magazin.html" style="padding: 4px; color: white;">Магазин</a>
-                <a href="director.html" style="padding: 4px; color: white;">Директор</a>
-                <a href="basket.php"><img class="logo" src="images/корзинаБелый.png"></a>
-                <a href="account.php"><img style="width: 3wh; height: 3vh;" src="images/user-profile-white.png"></a>
+                <a href="index.html"><img class="logo" src="../images/CoalLogo.png"></a>
+                <a href="Donbass_X.html" style="padding: 4px;">DonBass</a>
+                <a href="Donbass_Air.html" style="padding: 4px;">DonBass Air</a>
+                <a href="catalog.html" style="padding: 4px;">Поддержка</a>
+                <a href="magazin.html" style="padding: 4px">Магазин</a>
+                <a href="director.html" style="padding: 4px">Директор</a>
+                <a href="../php/basket.php"><img class="logo" src="../images/корзина.png"></a>
+                <a href="../php/account.php"><img style="width: 3wh; height: 3vh;" src="../images/user-profile-black.png"></a>
             </nav>
+            <nav class="navbar-under">
+                <b>Информация о магазине</b>
+            </nav>
+            <hr>
         </header>
 
+
         <div class="main">
-            <div class="Span12" style="text-align: center; padding-bottom: 10px;">
-                <video class="holder" src="videos/DX.mp4" autoplay loop></video>
-                <a href="Donbass.html">
-                    <section>
-                        <p style="color: white; font-size: 130%;"><b>Donbass X</b><br>
-                            Идеально. Профессионально. Air flow.<br>
-                            <button class="button button3">Купить</button>
-                        </p>
-                    </section>
-                </a>
-            </div>
-        </div>
-        <div class="main not-all">
-            <div class="Span6 black" style="padding: 10%; text-align: center;">
-                <a href="DonbassPlus.html">
-                    <img src="images/Холодильник2.1.jpg" style="width: 70%;">
-                    <div>
-                        <h2 style="color: white;"> DonBass X Plus </h2>
-                        <p style="color: white;"> Оптимальный. Семейный. Угодит своим функционалом кого угодно.</p>
-                        <button class="button button3">Купить</button>
-                    </div>
-                </a>
-                <br>
-            </div>
-            <div class="Span6" style=" padding: 5%; text-align: center; background-color: rgb(233, 235, 235);">
-                <h1>WWDP</h1>
-                <br>
-                <p style="font-size: 100%;">Выступление разработчиков нашей фирмы<br>
-                   Презентация наших новых продуктов или обновлений
-                   <br>
-                   <br>
-                   <br>
-                   <br>
-                   15 июня 2024 года<br></p>
-                <p style="font-size: 70%;">То, чего ждут все.</p>
-            </div>
-
-            <div class="Span6 black" style="padding: 10%; text-align: center;">
-                <h2 style="color: white;"><img src="images/CoalLogoBlack.png" style="width: 4.5%;">DCloud+</h2>
-                <p style="color: white;">Для нашего облачного сервиса, который может связать все ваши устройства, есть платная
-                версия, в виде ежемесячной подписки</p>
-                <img src="images/Cloud.png" style="width: 20%;">
-                <p style="color: white; font-size: 70%;">Всего 3.99$ в месяц</p>
-                <button class="button button3">Оформить</button>
-            </div>
-
-            <div class="Span6" style="padding: 10%; text-align: center; background-color: rgb(233, 235, 235);">
-                <a href="DonbassMini.html"><img src="images/Холодильник2.png" style="width: 30%;">
-                <h2 style="color: black;">DonBass X mini</h2>
-                <p style="color: black;">Для тех, кто ценит компактность и полный профессионализм
+            <div class="Span12" style="padding: 1%; padding-left: 18%; padding-right: 18%; font-size: 80%;">
+                <h1>Информация о магазине Donbass</h1>
+                <p>Donbass – один из лидеров рынка по продаже бытовой техники в России. </p>
+                <p>Наша цель изменить жизнь людей, сделав простым доступ к огромному количеству качественных и недорогих товаров, предоставляя лучший сервис.
+                    Наши клиенты – в центре всего, что мы делаем.
+                    Доверие - главное. Мы строим долгосрочные отношения.
+                    Во всём, чем занимаемся, стремимся быть экспертами.
+                    Открыты для предложений и улучшений.<br>
+                    Прозрачность - основа совместного бизнеса.
+                    Работаем, соблюдая этику бизнеса,
+                    уважаем другие мнения и интересы.
+                    Выполняем обязательства и берем ответственность за свои решения и
+                    нетерпимы к коррупции.<br>
+                    Coal - территория личной и коллективной самореализации,
+                    Мы - одна команда,
+                    уважаем мнение и интересы людей,
+                    ценим свободу, смелость и ответственность.
                 </p>
-                <button class="button button3">Купить</button></a>
-            </div>
-            
-            <div class="Span12" style="text-align: center; background-color: #ffffff;">
-                <div style="padding: 5%;">
-                    <p><img src="images/CoalLogo.png" style="width: 1.5%;">DCard
-                    <br>Забирайте 3% от оплаченной вами продукции Coal ежемесячно 
-                    <br><br><button class="button button2">Оформить</button></p>
-                    <img src="images/Карта3Д.png" style="width: 40%;">
-                </div>
             </div>
         </div>
 
