--- a/html/DonbassPR.html
+++ b/html/DonbassPR.html
@@ -2,42 +2,56 @@
 <html>
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-        <link rel="stylesheet" type="text/css" href="file.css">
-        
+        <meta charset="ASCII">
+        <link rel="stylesheet" type="text/css" href="../file.css">
     </head>
     <body>
-        <header class="header root">
+        <header class="header">
             <nav class="navbar">
-                <a href="index.html"><img class="logo" src="images/CoalLogoBlack.png"></a>
-                <a href="Donbass_X.html" style="padding: 4px; color: white;">DonBass</a>
-                <a href="Donbass_Air.html" style="padding: 4px; color: white;">DonBass Air</a>
-                <a href="catalog.html" style="padding: 4px; color: white;">Поддержка</a>
-                <a href="magazin.html" style="padding: 4px; color: white;">Магазин</a>
-                <a href="director.html" style="padding: 4px; color: white;">Директор</a>
-                <a href="basket.php"><img class="logo" src="images/корзинаБелый.png"></a>
-                <a href="account.php"><img style="width: 3wh; height: 3vh;" src="images/user-profile-white.png"></a>
+                <a href="index.html"><img class="logo" src="../images/CoalLogo.png"></a>
+                <a href="Donbass_X.html" style="padding: 4px;">DonBass</a>
+                <a href="Donbass_Air.html" style="padding: 4px;">DonBass Air</a>
+                <a href="catalog.html" style="padding: 4px;">Поддержка</a>
+                <a href="magazin.html" style="padding: 4px">Магазин</a>
+                <a href="director.html" style="padding: 4px">Директор</a>
+                <a href="../php/basket.php"><img class="logo" src="../images/корзина.png"></a>
+                <a href="../php/account.php"><img style="width: 3wh; height: 3vh;" src="../images/user-profile-black.png"></a>
+            </nav>
+            <nav class="navbar-under">
+                <b>DonBass X</b>
             </nav>
         </header>
-        <div class="main" style="padding: 10%;">
+        <hr>
 
-            <div class="Span4">
-                <img src="images/me.jpg" style="width:340px; border-radius: 5%;">
+        <div class="main" style="padding-left: 20%; padding-right: 20%; padding-top: 3%;">
+            <div class="Span6" style="text-align: center;">
+                <img src="../images/DonbassXFridgeRed.png" style="width: 100%;" id="donbassX">
             </div>
-            <div class="Span8">
-                <p><b>Солодовников Владислав Александрович</b>
-                <br>Директор компании Donbass
-                <br>Студент ФКН ВГУ
-                <br>Информационная Безопасность
-                <br>Контакты:
-                <ul>
-                    <li>тел. +7 (920) 406-53-07</li>
-                    <li>почта: mdfd.all@gmail.com</li>
-                    <li>vk: <a href="https://vk.com/klematisy"
-                               tagret="_blank">@klematisy</a></li>
-                </ul>
+            <div class="Span6" style="padding: 5%">
+                <p style="font-size: 100%;"><b>Кастомизируйте свой 57" дюймовый Donbass X</b></p>
+                <p class="info">Система Air flow от компании Coal
+                <br>Материал основного корпуса: нержавеющая сталь
+                <br>Цвет: белый
+                <br>Уровень шума: 50 дБ
+                <br>Тип: однокамерный
                 <br>
-                <br>
-            </p>
+                <br>Дверца сделана по механизму - CTouch Mechanism 
+                <br><br>
+                <hr>
+                </p>
+
+                <p class="info">
+                    <b>Coal Trade In</b>
+                    <br><br>Возьмите кредит на новый Donbass, когда обмениваете его на прошлую версию. 
+                    Это даст вам скидку, в зависимости от сданной техники. Либо вы можете сами 
+                    заняться переработкой устройств<br><br>
+                </p>
+
+                <hr>
+
+                <p class="info">
+                    Все деньги, полученные с продаж модели в данной рассцветке, пойдут на лечение людей борящихся со СПИДом.
+                </p>
             </div>
         </div>
         <footer>
@@ -73,5 +87,13 @@
             <hr>
             <p>Copyright © 2024 Coal Inc. Все права защищены.</p>
         </footer>
+        <div class="sale1">
+            <div class="sale">
+                <p style="text-align: end; font-size: 120%;"><b>$1999.00 или
+                <br>$91.6/м. за 2 года</b></p>
+                <p style="text-align: start;"><a href="../php/great_basket.php"><button id="chosen" class="button button4">Выбрать</button></a></p>
+            </div>
+        </div>
     </body>
+    <script src="../js/nodesPR.js"></script>
 </html>
