--- a/html/director.html
+++ b/html/director.html
@@ -2,74 +2,42 @@
 <html>
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-        <meta charset="ASCII">
-        <link rel="stylesheet" type="text/css" href="file.css">
+        <link rel="stylesheet" type="text/css" href="../file.css">
+        
     </head>
     <body>
-        <header class="header">
+        <header class="header root">
             <nav class="navbar">
-                <a href="index.html"><img class="logo" src="images/CoalLogo.png"></a>
-                <a href="Donbass_X.html" style="padding: 4px;">DonBass</a>
-                <a href="Donbass_Air.html" style="padding: 4px;">DonBass Air</a>
-                <a href="catalog.html" style="padding: 4px;">Поддержка</a>
-                <a href="magazin.html" style="padding: 4px">Магазин</a>
-                <a href="director.html" style="padding: 4px">Директор</a>
-                <a href="basket.php"><img class="logo" src="images/корзина.png"></a>
-                <a href="account.php"><img style="width: 3wh; height: 3vh;" src="images/user-profile-black.png"></a>
-            </nav>
-            <nav class="navbar-under">
-                <b>DonBass X Plus</b>
+                <a href="index.html"><img class="logo" src="../images/CoalLogoBlack.png"></a>
+                <a href="Donbass_X.html" style="padding: 4px; color: white;">DonBass</a>
+                <a href="Donbass_Air.html" style="padding: 4px; color: white;">DonBass Air</a>
+                <a href="catalog.html" style="padding: 4px; color: white;">Поддержка</a>
+                <a href="magazin.html" style="padding: 4px; color: white;">Магазин</a>
+                <a href="director.html" style="padding: 4px; color: white;">Директор</a>
+                <a href="../php/basket.php"><img class="logo" src="../images/корзинаБелый.png"></a>
+                <a href="../php/account.php"><img style="width: 3wh; height: 3vh;" src="../images/user-profile-white.png"></a>
             </nav>
         </header>
-        <hr>
+        <div class="main" style="padding: 10%;">
 
-        <div class="main" style="padding-left: 20%; padding-right: 20%; padding-top: 3%;">
-            <div class="Span6" style="text-align: center;">
-                <img src="images/Холодильник31.png" style="width: 100%;">
+            <div class="Span4">
+                <img src="../images/me.jpg" style="width:340px; border-radius: 5%;">
             </div>
-            <div class="Span6" style="padding: 5%">
-                <p style="font-size: 100%;"><b>Кастомизируйте свой 73" дюймовый Donbass X Plus</b></p>
-                <p class="info">Система Air flow от компании Coal
-                <br>Материал основного корпуса: нержавеющая сталь
-                <br>Цвет: стальной
-                <br>Уровень шума: 51 дБ
-                <br>Тип: двухкамерный
+            <div class="Span8">
+                <p><b>Солодовников Владислав Александрович</b>
+                <br>Директор компании Donbass
+                <br>Студент ФКН ВГУ
+                <br>Информационная Безопасность
+                <br>Контакты:
+                <ul>
+                    <li>тел. +7 (920) 406-53-07</li>
+                    <li>почта: mdfd.all@gmail.com</li>
+                    <li>vk: <a href="https://vk.com/klematisy"
+                               tagret="_blank">@klematisy</a></li>
+                </ul>
                 <br>
-                <br>Дверцы сделаны по механизму - CTouch Mechanism 
-                <br><br>
-                <hr>
-                </p>
-
-                <p class="info">
-                    <b>Coal Trade In</b>
-                    <br><br>Возьмите кредит на новый Donbass, когда обмениваете его на прошлую версию. 
-                    Это даст вам скидку, в зависимости от сданной техники. Либо вы можете сами 
-                    заняться переработкой устройств<br><br>
-                </p>
-                <hr>
-
-                <p class="info">
-                    <b>Комплектация:</b>
-                    <br><br>
-                    <button id="radiator" class="button-product button-complectation" style="padding: 10px 5%;">
-                        <p style="text-align: start;">Улучшенные радиаторы</p>
-                        <p id="priceRadiator" style="text-align: end; align-self: center;"> + $200.00</p>
-                    </button>
-                    <br>
-                    <button id="cabble" class="button-product button-complectation" style="padding: 10px 5%;">
-                        <p style="text-align: start;">Удлинённый кабель питания</p>
-                        <p id="priceCabble" style="text-align: end; align-self: center;"> + $50.00</p></button>
-                    <br>
-                    <button id="shelves" class="button-product button-complectation" style="padding: 10px 5%;">
-                        <p style="text-align: start;">Две дополнительные полочки</p>
-                        <p id="priceShelf" style="text-align: end; align-self: center;"> + $300.00</p></button>
-                    <br>
-                    <button id="compressor" class="button-product button-complectation" style="padding: 10px 5%;">
-                        <p style="text-align: start;">Дополнительная калибровка компрессора</p>
-                        <p id="priceCompressor" style="text-align: end; align-self: center;"> + $500.00</p>
-                    </button>
-                </p>
-                
+                <br>
+            </p>
             </div>
         </div>
         <footer>
@@ -105,15 +73,5 @@
             <hr>
             <p>Copyright © 2024 Coal Inc. Все права защищены.</p>
         </footer>
-        <div class="sale1">
-            <div class="sale">
-                <div>
-                    <p style="text-align: end; font-size: 120%;"><b>$<b id="pricePlus">2499</b>.00 или
-                    <br>$<b id="creditPlus">104.12</b>/м. за 2 года</b></p>
-                </div>
-                <p style="text-align: start;"><a href="great_basket.php"><button id="chosen" class="button button4">Выбрать</button></a></p>
-            </div>
-        </div>
-        <script src="DonbassPlus.js"></script>
     </body>
 </html>
