--- a/html/index.html
+++ b/html/index.html
@@ -3,66 +3,88 @@
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
         <meta charset="ASCII">
-        <link rel="stylesheet" type="text/css" href="file.css">
+        <link rel="stylesheet" type="text/css" href="../file.css">
     </head>
+
     <body>
-        <header class="header">
+        <header class="header root">
             <nav class="navbar">
-                <a href="index.html"><img class="logo" src="images/CoalLogo.png"></a>
-                <a href="Donbass_X.html" style="padding: 4px;">DonBass</a>
-                <a href="Donbass_Air.html" style="padding: 4px;">DonBass Air</a>
-                <a href="catalog.html" style="padding: 4px;">Поддержка</a>
-                <a href="magazin.html" style="padding: 4px">Магазин</a>
-                <a href="director.html" style="padding: 4px">Директор</a>
-                <a href="basket.php"><img class="logo" src="images/корзина.png"></a>
-                <a href="account.php"><img style="width: 3wh; height: 3vh;" src="images/user-profile-black.png"></a>
-            </nav>
-            <nav class="navbar-under">
-                <b>DonBass X SE</b>
+                <a href="index.html"><img class="logo" src="../images/CoalLogoBlack.png"></a>
+                <a href="Donbass_X.html" style="padding: 4px; color: white;">DonBass</a>
+                <a href="Donbass_Air.html" style="padding: 4px; color: white;">DonBass Air</a>
+                <a href="catalog.html" style="padding: 4px; color: white;">Поддержка</a>
+                <a href="magazin.html" style="padding: 4px; color: white;">Магазин</a>
+                <a href="director.html" style="padding: 4px; color: white;">Директор</a>
+                <a href="../php/basket.php"><img class="logo" src="../images/корзинаБелый.png"></a>
+                <a href="../php/account.php"><img style="width: 3wh; height: 3vh;" src="../images/user-profile-white.png"></a>
             </nav>
         </header>
-        <hr>
 
-        <div class="main" style="padding-left: 20%; padding-right: 20%; padding-top: 3%;">
-            <div class="Span6" style="text-align: center;">
-                <img src="images/DonbassSE.png" style="width: 100%;">
-            </div>
-            <div class="Span6" style="padding: 5%">
-                <p style="font-size: 100%;"><b>Кастомизируйте свой 57" дюймовый Donbass SE 2</b></p>
-                <p class="info">Система Air flow от компании Coal
-                <br>Материал основного корпуса: сталь
-                <br>Цвет: белый
-                <br>Уровень шума: 40 дБ
-                <br>Тип: двухкамерный
-                <br>
-                <br>Дверца сделана по механизму - CTouch Mechanism 
-                <br><br>
-                <hr>
-                </p>
-
-                <p class="info">
-                    <b>Coal Trade In</b>
-                    <br><br>Возьмите кредит на новый Donbass, когда обмениваете его на прошлую версию. 
-                    Это даст вам скидку, в зависимости от сданной техники. Либо вы можете сами 
-                    заняться переработкой устройств<br><br>
-                </p>
-                <hr>
-
-                <p class="info">
-                    <b>Комплектация:</b>
-                    <br><br>
-                    <button id="fashion" class="button-product button-complectation" style="padding: 10px 5%;">
-                        <p style="text-align: start;">Полочки типа Fashion</p>
-                        <p id="fashionPrice" style="text-align: end; align-self: center;"> + $800.00</p>
-                    </button>
-                    <br>
-                    <button id="compressor" class="button-product button-complectation" style="padding: 10px 5%;">
-                        <p style="text-align: start;">Дополнительная калибровка компрессора</p>
-                        <p id="compressorPrice" style="text-align: end; align-self: center;"> + $500.00</p>
-                    </button>
-                </p>
+        <div class="main">
+            <div class="Span12" style="text-align: center; padding-bottom: 10px;">
+                <video class="holder" src="../videos/DX.mp4" autoplay loop></video>
+                <a href="Donbass.html">
+                    <section>
+                        <p style="color: white; font-size: 130%;"><b>Donbass X</b><br>
+                            Идеально. Профессионально. Air flow.<br>
+                            <button class="button button3">Купить</button>
+                        </p>
+                    </section>
+                </a>
             </div>
         </div>
+        <div class="main not-all">
+            <div class="Span6 black" style="padding: 10%; text-align: center;">
+                <a href="DonbassPlus.html">
+                    <img src="../images/Холодильник2.1.jpg" style="width: 70%;">
+                    <div>
+                        <h2 style="color: white;"> DonBass X Plus </h2>
+                        <p style="color: white;"> Оптимальный. Семейный. Угодит своим функционалом кого угодно.</p>
+                        <button class="button button3">Купить</button>
+                    </div>
+                </a>
+                <br>
+            </div>
+            <div class="Span6" style=" padding: 5%; text-align: center; background-color: rgb(233, 235, 235);">
+                <h1>WWDP</h1>
+                <br>
+                <p style="font-size: 100%;">Выступление разработчиков нашей фирмы<br>
+                   Презентация наших новых продуктов или обновлений
+                   <br>
+                   <br>
+                   <br>
+                   <br>
+                   15 июня 2024 года<br></p>
+                <p style="font-size: 70%;">То, чего ждут все.</p>
+            </div>
+
+            <div class="Span6 black" style="padding: 10%; text-align: center;">
+                <h2 style="color: white;"><img src="../images/CoalLogoBlack.png" style="width: 4.5%;">DCloud+</h2>
+                <p style="color: white;">Для нашего облачного сервиса, который может связать все ваши устройства, есть платная
+                версия, в виде ежемесячной подписки</p>
+                <img src="../images/Cloud.png" style="width: 20%;">
+                <p style="color: white; font-size: 70%;">Всего 3.99$ в месяц</p>
+                <button class="button button3">Оформить</button>
+            </div>
+
+            <div class="Span6" style="padding: 10%; text-align: center; background-color: rgb(233, 235, 235);">
+                <a href="DonbassMini.html"><img src="../images/Холодильник2.png" style="width: 30%;">
+                <h2 style="color: black;">DonBass X mini</h2>
+                <p style="color: black;">Для тех, кто ценит компактность и полный профессионализм
+                </p>
+                <button class="button button3">Купить</button></a>
+            </div>
+            
+            <div class="Span12" style="text-align: center; background-color: #ffffff;">
+                <div style="padding: 5%;">
+                    <p><img src="../images/CoalLogo.png" style="width: 1.5%;">DCard
+                    <br>Забирайте 3% от оплаченной вами продукции Coal ежемесячно 
+                    <br><br><button class="button button2">Оформить</button></p>
+                    <img src="../images/Карта3Д.png" style="width: 40%;">
+                </div>
+            </div>
+        </div>
+
         <footer>
             <p> Стоимость обмена зависит от состояния, года выпуска и конфигурации вашего устройства, 
                 на которое распространяется действие программы обмена. Не на все устройства можно получить кредит. 
@@ -96,13 +118,5 @@
             <hr>
             <p>Copyright © 2024 Coal Inc. Все права защищены.</p>
         </footer>
-        <div class="sale1">
-            <div class="sale">
-                <p style="text-align: end; font-size: 120%;"><b>$<b id="priceSE">1499</b>.00 или
-                <br>$<b id="creditSE">62.45</b>/м. за 2 года</b></p>
-                <p style="text-align: start;"><a href="great_basket.php"><button id="chosen" class="button button4">Выбрать</button></a></p>
-            </div>
-        </div>
-        <script src="DonbassSE.js"></script>
     </body>
 </html>
